src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_Preferred_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Owner Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Type__c</fullName>
        <description>Designates where user&apos;s location of either onshore or offshore.  Use for Onshore Restriction cases.</description>
        <label>Agent Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore</fullName>
                    <default>true</default>
                    <label>Onshore</label>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BEO_Specialty__c</fullName>
        <description>BEO specialty</description>
        <label>BEO Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BEO_Specialty</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Digital_Onboarding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate that member is self-registered via Digital Onboarding</description>
        <label>Digital Onboarding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_SMS_invitation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this to send SMS invitation to the user IN ADDITION to an email</inlineHelpText>
        <label>Include SMS invitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Update__c</fullName>
        <description>User lookup to allow users to update their own Manager</description>
        <inlineHelpText>Enter a name here to update your manager. Must be an ACET user.</inlineHelpText>
        <label>Manager Update</label>
        <relationshipName>UserManager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Motion_Email_Signature__c</fullName>
        <description>US3065979</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field will be used by Motion initially to merge a custom name into an email signature rather than the users full name. Any LOB may use this field for email signatures if this is useful</inlineHelpText>
        <label>Email Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Backup__c</fullName>
        <description>This field is used to specify the backup for ERM Reporting.</description>
        <label>My Backup</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Optum_ID__c</fullName>
        <description>Stores a user&apos;s Optum ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Used for SSO situations where Optum ID is used instead of MSID</inlineHelpText>
        <label>Optum ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Used for API extracting to avoid multiple extracts and vlookups to obtain name value versus ID</description>
        <formula>Case(
Profile.Name , 
&quot;PT1&quot;, &quot;System Administrator&quot;,
&quot;PT2&quot;, &quot;Standard User&quot;,
Profile.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region that the agent is assigned to.</description>
        <inlineHelpText>Select the Region that the agent is assigned to.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>National/SB</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <description>Since data loader extract only contains 18digit ID; this is used to provide name value for time saving efforts.</description>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Since data loader extract only contains 18digit ID; this is used to provide name value for time saving efforts.</inlineHelpText>
        <label>Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAML_Subject_EPMP__c</fullName>
        <formula>$Label.SAML_EPMP</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAML Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAML_Subject__c</fullName>
        <description>This field is used for OBPP SSO integration</description>
        <formula>if(NOT(ISBLANK(FederationIdentifier)),FederationIdentifier + &apos;|I&apos;,&apos;&apos;)</formula>
        <label>SAML Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecureRoleName__c</fullName>
        <description>Used for Secure Provisioning Sync Process</description>
        <formula>Case(
Profile.Name, 
&apos; PT1&apos;, &apos;System Administrator&apos;, 
&apos; PT2&apos;, &apos;Standard User&apos;, 
Profile.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Secure Provisioning Sync Process</inlineHelpText>
        <label>RoleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecureUniqueIdentifier__c</fullName>
        <description>Used for Secure Provisioning Sync Process</description>
        <formula>Username</formula>
        <inlineHelpText>Used for Secure Provisioning Sync Process</inlineHelpText>
        <label>UniqueIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecureUserId__c</fullName>
        <description>Used for Secure Provisioning Sync Process</description>
        <formula>FederationIdentifier</formula>
        <inlineHelpText>Used for Secure Provisioning Sync Process</inlineHelpText>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SsoUserId__c</fullName>
        <description>Optum financial Wex user ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>WEX Username (HA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppress_Email_Reset_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Suppress Email Reset Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UHG_Access__c</fullName>
        <description>Designates if user can view UHG restricted cases.</description>
        <label>UHG Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Displays type of user which will indicate if cases or interactions should be displayed in reports or flagged for removal.</description>
        <inlineHelpText>End User are production users that create interactions or cases.
Development users are internal ACET users that are creating interactions and cases to test and flagged for removal.</inlineHelpText>
        <label>User Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development User</fullName>
                    <default>true</default>
                    <label>Development User</label>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveNonAdmin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Administrator</value>
        </filters>
        <label>Active Non Admin</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>Active_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Portal_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Customer Portal User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>SecureUserId__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAC_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Care Advisor Connect Community User</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CAC Community Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMIDS</fullName>
        <columns>SecureUserId__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>emids.com</value>
        </filters>
        <label>EMIDS</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Frozen_User</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Frozen User</label>
        <sharedTo>
            <group>Delegated_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Global_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.TITLE</field>
            <operation>equals</operation>
            <value>Global Access</value>
        </filters>
        <label>Global Users</label>
    </listViews>
    <listViews>
        <fullName>ITE_Users</fullName>
        <columns>SecureUserId__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>UHG_Access__c</columns>
        <columns>Agent_Type__c</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Profile_Name__c</field>
            <operation>contains</operation>
            <value>insurance,ITE,Family</value>
        </filters>
        <filters>
            <field>Profile_Name__c</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <label>ITE Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Delegated_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>SecureUserId__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Provider_Sandbox_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/1/2017 12:00 AM</value>
        </filters>
        <label>Provider Sandbox Users</label>
    </listViews>
    <listViews>
        <fullName>UHC_EB_Member</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>UHC</value>
        </filters>
        <label>UHC EB &amp; Member</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Care_Advisor_Connect_Community_Check_Age</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  		Profile.Name == &quot;Care Advisor Connect Community User&quot;,
  		OR(
    		YEAR(TODAY()) - YEAR(Contact.Birthdate) &lt; 12,

    		AND(YEAR(TODAY()) - YEAR(Contact.Birthdate) == 12,
    		MONTH(TODAY()) - MONTH(Contact.Birthdate) &lt; 0),

    		AND(YEAR(TODAY()) - YEAR(Contact.Birthdate) == 12,
    		MONTH(TODAY()) - MONTH(Contact.Birthdate) == 0,
    		DAY(TODAY()) - DAY(Contact.Birthdate) &lt; 0)
  		)
		)</errorConditionFormula>
        <errorMessage>This member is under the age of 13, so they cannot be invited to Care Advisor Connect. Please choose another member.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Care_Advisor_Connect_Community_User_Not</fullName>
        <active>true</active>
        <description>Care_Advisor_Connect_Community_User_Not</description>
        <errorConditionFormula>(CONTAINS(Contact.Account.RecordType.DeveloperName, &quot;PersonAccount&quot;)&amp;&amp; (Profile.Name &lt;&gt; &quot;Care Advisor Connect Community User&quot;)) &amp;&amp; NOT(ISPICKVAL(UserType, &quot;Standard&quot;)) &amp;&amp; ($UserRole.DeveloperName == &quot;Family_Engagement_Center_Agent&quot; || $UserRole.DeveloperName == &quot;FEC_Supervisor_Non_UHG&quot; || $UserRole.DeveloperName == &quot;FEC_Family_Advisor_Non_UHG&quot; || $UserRole.DeveloperName == &quot;Family_Engagement_Center_Supervisor&quot;)</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>Please select the FamilyLink Community User option.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Care_Advisor_Connect_Provider</fullName>
        <active>true</active>
        <errorConditionFormula>(CONTAINS(Contact.Account.RecordType.DeveloperName, &quot;Provider_User&quot;)&amp;&amp; (Profile.Name &lt;&gt; &quot;Care Advisor Connect Provider User&quot;))</errorConditionFormula>
        <errorDisplayField>ProfileId</errorDisplayField>
        <errorMessage>Please select the Family link Provider user</errorMessage>
    </validationRules>
</CustomObject>